--- a/index.html
+++ b/index.html
@@ -55,6 +55,6 @@ function stageBreakHandler(event){
 <script src="/gg_bd_ad_720x90.js" type="text/javascript"></script>
 <script src="/follow.js" type="text/javascript"></script>
 </div>
-<div><h1>你们给我出莱！！！！</h1></div>
+<div><h2>千金易得，二孙难出！有什么困难和鸭爷说！给我出莱！！！！</h2></div>
 </body>
 </html>
