--- a/index.html
+++ b/index.html
@@ -1,60 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta charset="UTF-8">
+    <title>导航页</title>
+    <style>
+        body{
+            background-color: #000;
+        }
+        span{
+            background:  url("star.png")  no-repeat;
+            background-size: 100% 100%;
+            width: 60px;
+            height: 60px;
+            position:absolute;
+            animation: flash 1s alternate infinite;
+            transition: all 1s;
+        }
+        span:hover{
+            transform: rotate(180deg) scale(1.5,1.5) !important;
+        }
 
-<title>马莱猴出！！</title>
+        @keyframes flash {
+            0%{opacity: 0}
+            100%{opacity: 1}
+        }
+        a{
+            font-size: 40px;
+            color: yellow;
+            position: absolute;
+            transition: all 1s;
+            cursor: pointer;
+            text-decoration: none;
+        }
+        a:hover{
+            transform: scale(3,3);
+        }
+    </style>
 </head>
 <body>
-
-<canvas id="mycanvas" width="612" height="280"></canvas>
-
-<script type="text/javascript" src="js/easeljs.min.js"></script>
-<script type="text/javascript">
-var stage = new createjs.Stage("mycanvas")
-createjs.Ticker.addEventListener("tick", stageBreakHandler);
-var img =  new Image()
-img.src = "img/horse.png"
-img.onload = function(){
-	var ss = new createjs.SpriteSheet({
-		"images": ["img/horse.png"], 
-		"frames": [
-			[519,1352,468,225,0,-39.5,-6.05],
-			[525,694,405,225,0,-39.5,-6.05],
-			[402,1577,398,241,0,-37.5,-9.05],
-			[0,1565,402,239,0,-33.5,-8.05],
-			[521,920,430,233,0,-23.5,-14.05],
-			[520,0,465,228,0,-7.5,-22.05],
-			[515,238,479,228,0,-8.5,-24.05],
-			[508,470,500,224,0,-2.5,-26.05],
-			[0,470,508,231,0,-5.5,-20.05],
-			[0,238,515,232,0,-9.5,-17.05],
-			[0,0,520,238,0,-12.5,-11.05],
-			[0,920,521,219,0,-18.5,-11.05],
-			[0,701,525,219,0,-18.5,-11.05],
-			[0,1352,519,213,0,-28.5,-10.05],
-			[0,1139,520,213,0,-28.5,-10.05]
-		],
-		"animations" : {
-			"run": [0,14,"run"]
-		}
-	})
-
-	var sp = new createjs.Sprite(ss,"run")
-	stage.addChild(sp)
-	stage.update();
-}
-
-function stageBreakHandler(event){
-	stage.update();
-}
-</script>
-<div style="text-align:center;clear:both;">
-<script src="/gg_bd_ad_720x90.js" type="text/javascript"></script>
-<script src="/follow.js" type="text/javascript"></script>
-</div>
-<div><h2>千金易得，二孙难出！有什么困难和鸭爷说！给我出莱！！！！</h2></div>
 </body>
+<script>
+    var width=document.documentElement.clientWidth;
+    var height=document.documentElement.clientHeight;
+    console.log(width);
+    console.log(height);
+    for (var i=0;i<100;i++){
+    var span=document.createElement('span');
+    var x=Math.random()*width;
+    var y=Math.random()*height;
+    var scale=Math.random();
+    var delay=Math.random()*1.5;
+    span.style.left=x+'px';
+    span.style.top=y+'px';
+    span.style.transform='scale('+scale+')';
+    span.style.animationDelay=delay+'s';
+    document.body.append(span);
+    }
+    var a=document.createElement('a');
+    var b=document.createElement('a');
+    a.innerText='BB堂';
+    b.innerText='法苏小天使';
+    a.href='https://breadduck.github.io/BB-malaihouchu/';
+    b.href='fasu.html';
+    var num=Math.random()*0.6;
+    var num2=Math.random()*0.8;
+    var dis=num*200;
+    var dis2=num2*200;
+    a.style.left=dis+'px';
+    a.style.top=num*height+'px';
+    b.style.left=dis2+'px';
+    b.style.top=num2*height+'px';
+    document.body.append(a,b);
+    timer= setInterval(function () {
+    dis+=5;
+    if (dis>(width-300)){
+    clearInterval(timer);
+    }
+    a.style.left=dis+'px';
+    },100);
+    timer2= setInterval(function () {
+        dis2+=4;
+        if (dis>(width-300)){
+            clearInterval(timer2);
+        }
+        b.style.left=dis2+'px';
+    },100);
+
+</script>
 </html>
