--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -8,7 +8,7 @@
             background-color: #000;
         }
         span{
-            background:  url("star.png")  no-repeat;
+            background:  url("image/star.png")  no-repeat;
             background-size: 100% 100%;
             width: 60px;
             height: 60px;
