--- a/fasu.html
+++ b/fasu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -35,7 +35,7 @@
             transform: rotate(0deg) translate(-50%,-50%) scale(1.5,1.5) !important;
         }
         span{
-            background:  url("love.png")  no-repeat;
+            background:  url("image/love.png")  no-repeat;
             background-size: 100% 100%;
             width: 60px;
             height: 60px;
